# audio_viz

./: .gitignore  AudioVisualizer  CMakeLists.txt  README.md  imgui.ini
include/: shader.h
shaders/: fragment.glsl  vertex.glsl
src/: audio_processor.cpp  audio_processor.h  file_dialog_mac.mm  main.cpp  visualizer.cpp  visualizer.h
